--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -8,8 +8,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/book_layout"
@@ -251,11 +250,12 @@
                 android:layout_marginStart="50dp"
                 android:layout_marginLeft="50dp"
                 android:clickable="true"
+                android:contentDescription="@string/replay"
+                android:focusable="true"
+                android:visibility="gone"
                 app:layout_constraintStart_toEndOf="@+id/btnPlay"
                 app:layout_constraintTop_toTopOf="@+id/btnPlay"
-                app:srcCompat="@drawable/ic_replay"
-                android:focusable="true"
-                android:contentDescription="@string/replay" />
+                app:srcCompat="@drawable/ic_replay" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/btnPlay"
@@ -264,13 +264,14 @@
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="10dp"
                 android:clickable="true"
+                android:contentDescription="@string/play"
                 android:focusable="true"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline5"
                 app:layout_constraintStart_toStartOf="@+id/guideline3"
                 app:layout_constraintTop_toBottomOf="@+id/txtLongDescInfo"
-                app:srcCompat="@drawable/ic_play"
-                android:contentDescription="@string/play" />
+                app:srcCompat="@drawable/ic_play" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/btnRecord"
@@ -279,12 +280,13 @@
                 android:layout_marginEnd="50dp"
                 android:layout_marginRight="50dp"
                 android:clickable="true"
+                android:contentDescription="@string/record"
+                android:focusable="true"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/btnPlay"
                 app:layout_constraintEnd_toStartOf="@+id/btnPlay"
                 app:layout_constraintTop_toTopOf="@+id/btnPlay"
-                app:srcCompat="@drawable/ic_mic"
-                android:focusable="true"
-                android:contentDescription="@string/record" />
+                app:srcCompat="@drawable/ic_mic" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -300,22 +302,20 @@
             android:id="@+id/imageView2"
             android:layout_width="174dp"
             android:layout_height="165dp"
-            app:srcCompat="@drawable/ic_error_outline_gray"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="200dp"
-            android:contentDescription="@string/book_image" />
+            android:contentDescription="@string/book_image"
+            app:srcCompat="@drawable/ic_error_outline_gray" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/imageView2"
-            android:text="@string/no_data"
-            android:textSize="24sp"
-            android:layout_marginTop="20dp"
             android:layout_centerHorizontal="true"
-           />
+            android:layout_marginTop="20dp"
+            android:text="@string/no_data"
+            android:textSize="24sp" />
     </RelativeLayout>
-
 
 
 </RelativeLayout>
