--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -18,10 +18,10 @@
             <ImageView
                 android:id="@+id/imgBookInfo"
                 android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="48dp"
+                android:layout_height="230dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="55dp"
                 android:contentDescription="@string/image_url_add"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -30,6 +30,7 @@
             <Button
                 android:id="@+id/btnAddToReadingBooks"
                 android:layout_width="170dp"
+                android:height="60dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 android:text="@string/currently_reading"
@@ -42,8 +43,9 @@
             <Button
                 android:id="@+id/btnAddToFinishedBooks"
                 android:layout_width="170dp"
+                android:height="60dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="20dp"
                 android:text="@string/finished_reading"
                 android:textAllCaps="false"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -53,8 +55,9 @@
             <Button
                 android:id="@+id/btnAddToWishListBooks"
                 android:layout_width="170dp"
+                android:height="60dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="20dp"
                 android:text="@string/add_to_wish_list"
                 android:textAllCaps="false"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +68,8 @@
                 android:id="@+id/btnAddToFavoriteBooks"
                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:height="60dp"
+                android:layout_marginTop="20dp"
                 android:text="@string/add_to_favorite"
                 android:textAllCaps="false"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -143,6 +147,12 @@
                 android:text="@string/description_demo"
                 app:layout_constraintStart_toStartOf="@+id/guideline3"
                 app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+            <Space
+                app:layout_constraintTop_toBottomOf="@+id/txtLongDescInfo"
+                app:layout_constraintStart_toStartOf="@+id/guideline3"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"/>
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline"
