--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6177FC</color>
-    <color name="colorPrimaryDark">#576EF7</color>
+    <color name="colorPrimary">#50c4ed</color>
+    <color name="colorPrimaryDark">#30bbec</color>
     <color name="colorAccent">#FF6584</color>
     <color name="colorDarkBlue">#3D4054</color>
     <color name="purple_200">#FFBB86FC</color>
